Thu Aug 21 14:05:09 2003  George Lebl <jirka@5z.com>

	* gui/gdmsetup.desktop.in: Add System to categories to partly fix
	  #120360.  We can't add Settings as that would break the spec
	  as spec says settings are only for desktop settings and not
	  for system setup.

Wed Aug 20 18:55:06 2003  George Lebl <jirka@5z.com>

	* AUTHORS: update, haven't done so in a while

Wed Aug 20 13:21:48 2003  George Lebl <jirka@5z.com>

	* Release 2.4.2.101

Wed Aug 20 12:13:04 2003  George Lebl <jirka@5z.com>

	* config/gdm.conf.in, daemon/gdm.h: sync some defaults and make
	  lots of keys commented out in the standard config file so that
	  we can change the defaults later without users having to
	  install a new config file.

	* daemon/xdmcp.c, daemon/cookie.c: Use glib's random functions
	  instead of rand where we need those pesky pseudorandom
	  numbers

	* daemon/slave.c: cleanup for greeter restarting

	* daemon/verify-pam.c: a bit of cleanup and set tmp_PAM_USER
	  to login if login is set, just in case pam is weird.

	* gui/gdmsetup.c: when not running from within gdm itself
	  display "ghelp:gdm" on help

	* docs/C/gdm.xml: minor updates

Mon Aug 18 17:33:12 2003  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c, gui/greeter/greeter.c,
	  gui/greeter/greeter_session.c: cleanup and fix the signal blocking,
	  plus abort when we receive a bad opcode since otherwise we pretty
	  much just hang.

	* daemon/auth.c: don't add entries twice

Mon Aug 18 13:56:14 2003  George Lebl <jirka@5z.com>

	* daemon/cookie.c: add more fallbacks in case of /dev/random and
	  friends not being around, also use the last cookie generated in the
	  checksum and spot check the data we get from the files for
	  randomness (for example /dev/audio might just give us zeros), also
	  read 1024 bytes from the files.

Mon Aug 18 11:02:38 2003  George Lebl <jirka@5z.com>

	* daemon/slave.c, daemon/gdm.h, daemon/server.c, daemon/xdmcp.c:
	  To prevent a possible DoS attack where an app might spit out