@@ -1,3 +1,7 @@
+Thu Aug 21 14:10:44 2003  George Lebl <jirka@5z.com>
+
+	* daemon/gdm.c: add --version option to fix #120409
+
 Thu Aug 21 14:05:09 2003  George Lebl <jirka@5z.com>
 
 	* gui/gdmsetup.desktop.in: Add System to categories to partly fix
